Adding more integration tests

--- a/integration-node-tests/README
+++ b/integration-node-tests/README
@@ -8,4 +8,4 @@ Then execute:
 
 or
 
-`node index.js --color=always 2>&1 | tee test-result-file` to save the results in a file
+`node index.js | tee test-result-file` to save the results in a file
